# gtktypepad

./: Makefile.am  Makefile.in  Makefile.m32  Makefile.w32  README  configure.in  gtktypepad.c  gtktypepad.spec  gtktypepad.spec.in  resource.h
po/: Makefile  Makefile.w32  gtktypepad.pot  ja.po
